Infrastruture/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexapod-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexapod-client
  template:
    metadata:
      labels:
        app: nexapod-client
    spec:
      containers:
      - name: client
        image: nexapod-client:latest
        volumeMounts:
        - name: config
          mountPath: /app/config.yaml
          subPath: config.yaml
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          exec:
            command: ["pgrep", "-f", "nexapod_client.py"]
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          exec:
            command: ["pgrep", "-f", "nexapod_client.py"]
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: config
        configMap:
          name: nexapod-client-config
---
apiVersion: v1
kind: Service
metadata:
  name: nexapod-client
spec:
  selector:
    app: nexapod-client
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
